Fix overflow on playlist-container

--- a/src/assets/styles/cmps/station/Browse.css
+++ b/src/assets/styles/cmps/station/Browse.css
@@ -275,4 +275,6 @@ a.playlist-item{
      
 }
 
-
+.playlist-container{
+  overflow-y: auto;
+}
